<resources>
    <string name="app_name">Tette</string>
    <string name="tab_text_1">午前</string>
    <string name="tab_text_2">午後</string>
    <string name="button1">予定を入れる</string>
    <string name="action00">食事</string>
    <string name="action01">散歩</string>
    <string name="action02">運動</string>
    <string name="action03">病院</string>
    <string name="action04">お出かけ</string>
    <string name="action05">テレビ</string>
</resources>